Changed the return context method to return URI. Also made it a default method